--- a/nao.html
+++ b/nao.html
@@ -33,6 +33,12 @@
             <div class="foto-nao" style="align-items: center;">
                 <center><img src="pages/nao/media/nao.png" alt=""></center>
             </div>
+
+            <div id="video-nao">
+                <video src="pages/nao/media/ezgif-5-18f53e4bd5.mp4" controls></video>
+            </div>
+
+
             </div>   
 
            
