--- a/nao.html
+++ b/nao.html
@@ -34,9 +34,12 @@
                 <center><img src="pages/nao/media/nao.png" alt=""></center>
             </div>
 
-            <div id="video-nao">
-                <video src="pages/nao/media/ezgif-5-18f53e4bd5.mp4" controls></video>
-            </div>
+            <center>
+                <div id="video-nao-container" style="transform: scale(0.75);">
+                    <video src="pages/nao/media/ezgif-5-18f53e4bd5.mp4" style="padding-right: 25px;" controls></video>
+                    <video src="pages/nao/media/nao-video.mp4" controls></video>
+                </div>
+            </center>
 
 
             </div>   
