--- a/qorario.html
+++ b/qorario.html
@@ -26,7 +26,7 @@
             <h1 style="color: white; padding-bottom: 50px;">Il nostro quadro orario</h1>
             <center>
             <div id="quadro-orario">
-                <img src="pages/qorario/media/qorario.png" alt="">
+                <img src="pages/qorario/media/qorario.png" style="transform: scale(0.95);" alt="">
             </div>
             </center>
         </div>
