--- a/ricordi_form_post.html
+++ b/ricordi_form_post.html
@@ -36,9 +36,9 @@
 
             <div class="form-container">
                 <form action="ricordi_post.php" method="POST">
-                    <br>Nome: <input type="text" name="nome">
-                    <br>Titolo: <input type="text" name="titolo">
-                    <br>Paragrafo:<br><input type="text-area" name="paragrafo">
+                    <br>Nome (max. 20 caratteri): <input type="text" name="nome" placeholder="Anonimo" required maxlength="20">
+                    <br>Titolo (max. 40 caratteri): <input type="text" name="titolo" required maxlength="40">
+                    <br>Paragrafo (max. 500 caratteri)<br><input type="text-area" name="paragrafo" required maxlength="500">
                     <br><br><input type="submit"> <input type="reset">
                 </form>
 
