--- a/ricordi_form_post.html
+++ b/ricordi_form_post.html
@@ -36,7 +36,7 @@
 
             <div class="form-container">
                 <form action="ricordi_post.php" method="POST">
-                    <br>Nome (max. 20 caratteri): <input type="text" name="nome" placeholder="Anonimo" required maxlength="20">
+                    <br>Nome (max. 20 caratteri): <input type="text" name="nome" placeholder="Anonimo" maxlength="20">
                     <br>Titolo (max. 40 caratteri): <input type="text" name="titolo" required maxlength="40">
                     <br>Paragrafo (max. 500 caratteri)<br><input type="text-area" name="paragrafo" required maxlength="500">
                     <br><br><input type="submit"> <input type="reset">
