--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
                             \/     \/     \/          \/     \/                   \/
                 </div>
 
-                <div class="presentazione-iniziale">
+                <div class="presentazione-iniziale" style="padding-left: 100px; padding-right: 100px;">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Arcu ac tortor dignissim convallis aenean et tortor at risus. Consectetur adipiscing elit duis tristique sollicitudin nibh sit amet commodo. Morbi tincidunt augue interdum velit euismod in pellentesque massa. Eu lobortis elementum nibh tellus molestie nunc non blandit. Nibh tellus molestie nunc non blandit massa enim nec. Cras adipiscing enim eu turpis egestas pretium aenean pharetra magna. Adipiscing elit pellentesque habitant morbi tristique. Diam phasellus vestibulum lorem sed risus. Sed viverra tellus in hac habitasse platea. Lacus luctus accumsan tortor posuere ac ut.
-Sit amet luctus venenatis lectus magna. Facilisi etiam dignissim diam quis enim. Fames ac turpis egestas integer eget aliquet. Ac orci phasellus egestas tellus rutrum. Consequat mauris nunc congue nisi vitae suscipit tellus mauris. Viverra vitae congue eu consequat. Purus semper eget duis at tellus at urna condimentum. Ipsum dolor sit amet consectetur. Nulla facilisi etiam dignissim diam quis. Duis ultricies lacus sed turpis tincidunt id aliquet risus. Tellus integer feugiat scelerisque varius morbi enim. Elementum integer enim neque volutpat. Tempor orci dapibus ultrices in iaculis nunc. In fermentum posuere urna nec tincidunt praesent semper feugiat. Magna sit amet purus gravida quis. Vitae semper quis lectus nulla at volutpat diam. Et netus et malesuada fames ac turpis egestas maecenas. Rhoncus aenean vel elit scelerisque mauris pellentesque pulvinar.    
+                        Questo è il sito presentazione dell'IISS E. Majorana di Termoli. Qui troverai una panoramica della scuola, informazioni sul corso di Informatica, e una sezione in cui lasciare un "ricordo", <br >dove esprimere le tue opinioni o semplicemente tutto quello che ti passa per la testa.
                     </p>
                 </div>
 
