aggiunto paragrafo su Majorana con immagine

--- a/homepage.html
+++ b/homepage.html
@@ -29,9 +29,17 @@
         <div class="container">
             <div id="panoramica">
                 <h1 style="color: white;">Panoramica</h1>
-                <p>
-                    Chi è Ettore Majorana – Al mondo ci sono varie categorie di scienziati; gente di secondo e terzo rango, che fa del suo meglio ma non va lontano. C’è anche gente di primo rango, che arriva a scoperte di grande importanza, fondamentali per lo sviluppo della scienza. Ma poi ci sono i geni come Galileo e Newton. Ebbene Ettore era uno di quelli. Majorana aveva quel che nessun altro al mondo ha. Sfortunatamente gli mancava quel che è invece comune trovare negli altri uomini: il semplice buon senso.”
-                </p>
+                <div class="container-panoramica">
+                    <div class="majorana-image" style="margin-left: 10%; margin-top: 5%;">
+                        <img src="pages/homepage/media/Ettore_Majorana.jpg" height="25%" width="25%">
+                    </div>
+                    <div class="majorana-text">
+                        <h2 style="color: white;margin-left: 450px;">Chi è Ettore Majorana?</h2>
+                    <p style="margin-left: 35%;">
+                       Fisico italiano. Laureatosi in fisica nel 1928, fu tra i più promettenti allievi di Enrico Fermi, sotto la guida del quale si occupò di spettroscopia atomica e successivamente di fisica nucleare. Le sue più importanti ricerche relative a quest’ultima disciplina riguardano una teoria sulle forze che assicurano stabilità al nucleo atomico: egli per primo avanzò infatti l’ipotesi secondo la quale protoni e neutroni, unici componenti del nucleo atomico, interagiscono grazie a forze di scambio.
+                    </p>
+                    </div>
+                </div>
             </div>
             
             <div id="sedi" style="color: white;">
