--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <div class="presentazione-iniziale" style="padding-left: 100px; padding-right: 100px;">
                     <p>
-                        Questo è il sito presentazione dell'IISS E. Majorana di Termoli. Qui troverai una panoramica della scuola, informazioni sul corso di Informatica, e una sezione in cui lasciare un "ricordo", <br >dove esprimere le tue opinioni o semplicemente tutto quello che ti passa per la testa.
+                        Questo è il sito presentazione dell'IISS E. Majorana di Termoli. Qui troverai informazioni sul corso di Informatica, e una sezione in cui lasciare un "ricordo", <br >dove esprimere le tue opinioni o semplicemente tutto quello che ti passa per la testa.
                     </p>
                 </div>
 
