--- a/laboratori.html
+++ b/laboratori.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
-    <title>&#x1F917; Laboratori</title>
+    <title>&#x1F917; Homepage</title>
 </head>
 <body style="background-color: #000a0c;">
     <header>
@@ -18,7 +18,6 @@
             <a href="laboratori.html">Laboratori</a>
             <a href="nao.html">Robotica umanoide (NAO)</a>
             <a href="qorario.html">Quadro orario</a>
-            <a href="ricordi.php">Ricordi</a>
         </nav>
     </header>
 
@@ -33,9 +32,10 @@
             <section class="slider-container">
                 <div class="slider-wrapper">
                     <div class="slider">
-                        <img id="slide-1" src="pages/laboratori/media/lab1.png" alt="Foto laboratorio 1." />
-                        <img id="slide-2" src="pages/laboratori/media/lab2.jpeg" alt="Foto laboratorio 2." />
-                        <img id="slide-3" src="pages/laboratori/media/lab3.jpeg" alt="Foto laboratorio 3." />
+                            <!--Immagini prese da unsplash.com-->
+                        <img id="slide-1" src="pages/laboratori/media/lab1.png" alt="Mani che scavano nella terra." />
+                        <img id="slide-2" src="pages/laboratori/media/lab2.jpeg" alt="Mani guantate che effettuano la potatura di una pianta." />
+                        <img id="slide-3" src="pages/laboratori/media/lab3.jpeg" alt="Bambino intento ad annaffiare delle piante." />
                     </div>
                     <div class="slider-nav">
                         <a href="#slide-1"></a>
