--- a/qorario.html
+++ b/qorario.html
@@ -24,7 +24,8 @@
 
     <main>
         <div class="container">
-            <h1 style="color: white; padding-bottom: 50px;">Il nostro quadro orario</h1>
+            <h1 style="color: white; margin-left: 25px;">Il nostro quadro orario</h1>
+            <p style="margin-left: 25px; color: white;">Qui puoi visualizzare il numero di ore minime annuali per ogni materia.</p>
             <center>
             <div id="quadro-orario">
                 <img src="pages/qorario/media/qorario.png" style="transform: scale(0.95);" alt="">
